fix(server): changelog width on mobile (#8992)

--- a/server/assets/marketing/css/routes/changelog.css
+++ b/server/assets/marketing/css/routes/changelog.css
@@ -92,11 +92,10 @@
     position: relative;
     flex-direction: column;
     gap: var(--noora-spacing-8);
-
-    @media (min-width: 1024px) {
-      padding-right: var(--noora-spacing-6);
-      padding-left: var(--noora-spacing-6);
-    }
+    box-sizing: border-box;
+    padding-right: var(--noora-spacing-6);
+    padding-left: var(--noora-spacing-6);
+    max-width: 100%;
 
     @media (min-width: 1024px) {
       display: grid;
@@ -106,8 +105,6 @@
       align-items: start;
       margin-right: auto;
       margin-left: auto;
-      padding-right: var(--noora-spacing-6);
-      padding-left: var(--noora-spacing-6);
       width: 869px;
       max-width: 869px;
     }
